--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,3 +1,12 @@
-<p>bbbbbbb</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Testing</title>
+ <h1>This is Thulisile Bayana Web Page</h1>  
+</head>
+<body>
 
-<h1>hello thuli </h1>
+
+
+</body>
+</html>
